--- a/src/output.css
+++ b/src/output.css
@@ -22,6 +22,7 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-2xl: 42rem;
+    --container-7xl: 80rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
@@ -525,6 +526,9 @@
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
+  }
+  .max-w-7xl {
+    max-width: var(--container-7xl);
   }
   .max-w-none {
     max-width: none;
@@ -1387,6 +1391,9 @@
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-32 {
     padding-block: calc(var(--spacing) * 32);
   }
@@ -1559,6 +1566,9 @@
   }
   .text-green-400 {
     color: var(--color-green-400);
+  }
+  .text-indigo-600 {
+    color: var(--color-indigo-600);
   }
   .text-red-800 {
     color: var(--color-red-800);
